# RAG-LLM-Energy-Expert

./: .gitignore  .pre-commit.config.yaml  Makefile  README.md  embedding_service.yaml  pyproject.toml
gcp_utils/: gcs.py  secret_manager.py
notebooks/: embedding_chunks.ipynb  embeddings.ipynb  ingestion_pipeline.ipynb  llm_integration.ipynb  load_document.ipynb  load_file.ipynb  parse_chunking_embed.ipynb  parsing.ipynb  parsing_chunking.ipynb  rag_context_retrieval.ipynb
rag_llm_energy_expert/: config.py  credentials.py  ingest_document.py  ingest_file.py  ingest_file_auxiliars.py  load_document.py  parsers.py  parsers_auxiliars.py
rag_llm_energy_expert/llm/: chat.py  chat_auxiliars.py  db_auxiliars.py
rag_llm_energy_expert/search/: searchers.py  searchers_auxiliars.py
rag_llm_energy_expert/services/embeddings/: .dockerignore  README.md  config.py  embedding_pipeline.py  embeddings_service.dockerfile
rag_llm_energy_expert/services/embeddings/app/: main.py  models.py
rag_llm_energy_expert/services/ingestion/: README.md  ingestion_pipeline.py
rag_llm_energy_expert/services/ingestion/parsers/: pdf_parser.py
rag_llm_energy_expert/utils/gcp/: bigquery.py  gcs.py
rag_llm_energy_expert/utils/vector_db/: qdrant.py
scripts/: copy_files.sh  load_document.py  upload_document.py  upload_file.py
terraform/: backend.tf  main.tf  vars.tf
terraform/dev/: dev.tfvars
utils/gcp/: gcs.py  secret_manager.py
utils/vector_db/: qdrant.py
