[project]
name = "rag-llm-energy-expert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
gcp = [
    "gcsfs>=2025.3.0",
    "google-cloud-run>=0.10.17",
    "google-cloud-secret-manager>=2.23.2",
    "google-cloud-storage>=3.1.0",
]
notebooks = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
]
general-dev = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
]
llm = [
    "einops>=0.8.1",
    "langchain-text-splitters>=0.3.7",
    "litellm>=1.63.11",
    "llama-cloud-services>=0.6.6",
    "llama-index-core>=0.12.25",
    "llama-index-readers-file>=0.4.6",
    "pymupdf4llm>=0.0.17",
    "pypdf2>=3.0.1",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.1",
    "transformers>=4.50.1",
]
